@@ -3557,7 +3557,7 @@ class InterDifferingSerializer(InterRepository):
         """Get the parent keys for a given root id."""
         root_id, rev_id = root_key
         # Include direct parents of the revision, but only if they used
-        # the same root_id.
+        # the same root_id and are heads.
         parent_keys = []
         for parent_id in parent_map[rev_id]:
             if parent_id == _mod_revision.NULL_REVISION:
@@ -3577,9 +3577,32 @@ class InterDifferingSerializer(InterRepository):
                 self._revision_id_to_root_id[parent_id] = None
             else:
                 parent_root_id = self._revision_id_to_root_id[parent_id]
-            if root_id == parent_root_id or parent_root_id is None:
-                parent_keys.append((root_id, parent_id))
-        return tuple(parent_keys)
+            if root_id == parent_root_id:
+                # With stacking we _might_ want to refer to a non-local
+                # revision, but this code path only applies when we have the
+                # full content available, so ghosts really are ghosts, not just
+                # the edge of local data.
+                parent_keys.append((parent_id,))
+            else:
+                # root_id may be in the parent anyway.
+                try:
+                    tree = self.source.revision_tree(parent_id)
+                except errors.NoSuchRevision:
+                    # ghost, can't refer to it.
+                    pass
+                else:
+                    try:
+                        parent_keys.append((tree.inventory[root_id].revision,))
+                    except errors.NoSuchId:
+                        # not in the tree
+                        pass
+        g = graph.Graph(self.source.revisions)
+        heads = g.heads(parent_keys)
+        selected_keys = []
+        for key in parent_keys:
+            if key in heads and key not in selected_keys:
+                selected_keys.append(key)
+        return tuple([(root_id,)+ key for key in selected_keys])
 
     def _new_root_data_stream(self, root_keys_to_create, parent_map):
         for root_key in root_keys_to_create:
